--- a/shiro/pom.xml
+++ b/shiro/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.wxl</groupId>
-        <artifactId>spring-utils</artifactId>
+        <artifactId>spring-utils-tool</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <groupId>com.wxl.shiro</groupId>
@@ -43,6 +43,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.1.3</version>
         </dependency>
     </dependencies>
 
