--- a/token/pom.xml
+++ b/token/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.wxl</groupId>
-        <artifactId>spring-utils</artifactId>
+        <artifactId>spring-utils-tool</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <groupId>com.wxl.token</groupId>
@@ -55,6 +55,20 @@
             <artifactId>orika-core</artifactId>
             <version>1.4.6</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.1.3</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.7.0</version>
+        </dependency>
+
 
     </dependencies>
 
