添加redis分布式锁

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <modules>
         <module>token</module>
         <module>shiro</module>
+        <module>redis</module>
     </modules>
 
     <repositories>
