添加事务代码

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>token</module>
         <module>shiro</module>
         <module>redis</module>
+        <module>transaction</module>
     </modules>
 
     <repositories>
