添加消息队列

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     </properties>
 
     <modules>
+        <module>mq</module>
         <module>token</module>
         <module>shiro</module>
         <module>redis</module>
