--- a/redis/src/main/resources/application.properties
+++ b/redis/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+pring.redis.database=0
+spring.redis.host=127.0.0.1
+spring.redis.lettuce.pool.max-active=8
+spring.redis.lettuce.pool.max-idle=8
+spring.redis.lettuce.pool.max-wait=-1ms
+spring.redis.lettuce.pool.min-idle=0
+spring.redis.lettuce.shutdown-timeout=100ms
+spring.redis.password=
+spring.redis.port=6379
